# jw4a-d2.1

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE.md  README.md  README.rst  Snakefile  black-config.toml  environment.yaml
config/: default.yaml
envs/: calliope.yaml  plot.yaml
lib/: README.rst  pyproject.toml  template.py
lib/lib/: download.py  postprocessing.py  template.py  unit_conversion.csv
lib/src/lib/: __init__.py  colors.yaml  download.py  helpers.py  plot.py  postprocessing.py  template.py
notebooks/: boxplots.ipynb  check_regions.ipynb  check_weatherdata.ipynb  data_format.ipynb  datarray.ipynb  inspect_potentials_offshore.ipynb  partition-offshore-regions.ipynb  plot_areas.ipynb  plot_energy_cap.ipynb  plot_map_v2.ipynb  plot_maps.ipynb  plot_model_results.ipynb  plot_results_v2.ipynb  plot_timeseries.ipynb  prepare_capfac.ipynb  run.ipynb  table_ model_results.ipynb  work_cutout_ml.ipynb
report/: pandoc-metadata.yaml
rules/: boundaries.smk  capacity_factors.smk  download_data.smk  model.smk  model_assembly.smk  model_overrides.smk  plot.smk  potentials_offshore.smk  prepare_capacity_factors.smk  prepare_potentials_offshore.smk  prepare_regions.smk  table.smk
scripts/: build_availabilitymatrix.py  build_cutout_ml.py  build_cutout_model_level.py  download_cutout_era5.py  download_cutout_era5_model_level.py  download_weatherdata_ERA5.py  draw_map.py  draw_plots_capacityfactors.py  draw_plots_capacityfactors_distribution.py  map_eez_to_eurospores.py  plot_capacity_factor_distribution.py  plot_capacityfactors.py  plot_model_results.py  (+12 more)
(+12 files in other folders)
