[project]
name = "jw4a-d2.1-lib"
version = "0.0.1"
requires-python = ">=3.8"
description = "Library for JW4A-d2.1 pipeline"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lib = ["*.csv", "*.yaml"]
